lang/macro/tests/ui/contract/fail/16-invalid-parameter-type.stderr
error[E0277]: the trait bound `f32: MappingToSolidityType` is not satisfied
  --> $DIR/16-invalid-parameter-type.rs:12:9
   |
12 |         pub fn noop(&self, value: f32) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `MappingToSolidityType` is not implemented for `f32`
   |
  ::: $WORKSPACE/ty_mapping/src/traits.rs:98:8
   |
98 |     T: MappingToSolidityType,
   |        --------------------- required by this bound in `liquid_ty_mapping::len`
   |
   = note: required because of the requirements on the impl of `MappingToSolidityType` for `(f32,)`

error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> $DIR/16-invalid-parameter-type.rs:12:21
   |
12 |         pub fn noop(&self, value: f32) {}
   |                     ^^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
